--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/e702a973c5.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/..." crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
